--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="assets/css/custom.css">
 </head>
 <body>
   <app-root></app-root>
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/custom.js"></script>
 </body>
 </html>
